# data-assets-pipeline

./: .dockerignore  .env.example  .envrc  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  banner.txt  devbox.json  flake.nix  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  workspace.yaml
.claude/hooks/: session-start.sh
.cli/: CONTRIBUTING.md  go.mod  go.sum  package.nix
.cli/cmd/: root.go  root_test.go
.cli/cmd/dagster/: dagster_test.go
.cli/cmd/env/: env.go  reset.go  versions.go  versions_test.go
.cli/cmd/k8s/: status.go  up.go
.cli/cmd/meta/: go.go  meta.go  meta_test.go
.cli/internal/ui/: styles.go
.dev/scripts/: uv-sync.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/setup-nix-env/: action.yml
.github/workflows/: ci.yml  cli.yml  release.yml
arca/flow/: assets.py  definitions.py  mets_parser.py  pydantic_models.py  sensors.py  utils.py
arca/flow/core/: assets.py  definitions.py  mets_parser.py  pydantic_models.py  sensors.py  utils.py
arca/flow/tests/: test_assets.py
cli/: .goreleaser.yaml  CONTRIBUTING.md  README.md  flake.nix  gomod2nix.toml  main.go  package.nix  pyproject.toml
cli/arca/flow/cli/commands/: dev.py  env.py  k8s.py
cli/arca_flow_cli/: app.py  banner.py  logo.txt  theme.py
cli/arca_flow_cli/commands/: dev.py  env.py  hints.py  k8s.py
cli/arca_flow_cli/utils/: cache.py  run.py
cli/cmd/: root.go  root_test.go  version.go
cli/cmd/dagster/: dagster.go  materialize.go  run.go
cli/cmd/dev/: check.go  dev.go  dev_test.go  devserver.go  lint.go  test.go  typecheck.go
cli/cmd/env/: clean.go  versions.go  versions_test.go  welcome.go
cli/cmd/k8s/: down.go  k8s.go  k8s_test.go  logs.go  restart.go  shell.go
cli/cmd/meta/: go.go  meta_test.go
cli/dap_cli/: app.py  logo.txt  theme.py
cli/dap_cli/commands/: dev.py  env.py  hints.py  k8s.py
cli/dap_cli/utils/: cache.py
cli/internal/exec/: run.go  run_test.go
cli/internal/ui/: output.go  output_test.go  styles_test.go
cli/tests/: test_cache.py  test_commands.py  test_k8s.py
da_pipeline/: __init__.py  assets.py  definitions.py  mets_parser.py  pydantic_models.py  repository.py  sensors.py  utils.py
da_pipeline_tests/: conftest.py  test_assets.py
helm/: pvc.yaml  values-local.yaml  values.yaml
tests/core/: test_assets.py
tests/core/test_data/: synthetic_sip.xml
