[build-system]
requires = ["hatchling>=1.12.0"]
build-backend = "hatchling.build"

[project]
name = "da_pipeline"
version = "0.1.0"
description = "A Dagster-based orchestrator for OAIS-compliant SIP processing"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Jaime Cardozo", email = "jaime.cardozo@library.ethz.ch" },
]
keywords = ["dagster", "mets", "oais", "sip", "digital-preservation"]
dependencies = [
  "dagster>=1.10.15,<2.0.0",
  "dagster-webserver>=1.10.15,<2.0.0",
  "pydantic>=2.11.4,<3.0.0",
  "data-archive-models>=0.1.0a2.dev",
]

[project.urls]
Repository = "https://github.com/eth-library/data-assets-pipeline"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.9.0",
  "mypy>=1.15.0",
  "pre-commit>=4.0.0",
]

production = [
  "dagster-k8s>=0.26.14",
  "dagster-postgres>=0.26.14",
]

[tool.dagster]
module_name = "da_pipeline.definitions"
code_location_name = "da_pipeline"

[tool.hatch.build]
packages = ["da_pipeline"]
exclude = ["da_pipeline_tests"]

[tool.hatch.build.targets.wheel]
include = ["da_pipeline/**"]

[tool.uv.sources]
data-archive-models = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled separately

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["da_pipeline_tests"]
pythonpath = ["."]
