[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "arca-flow"
version = "0.1.0"
description = "A Dagster-based orchestrator for OAIS-compliant SIP processing"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Jaime Cardozo", email = "jaime.cardozo@library.ethz.ch" },
]
keywords = ["dagster", "mets", "oais", "sip", "digital-preservation"]
dependencies = [
  "dagster>=1.13.0,<2.0.0",
  "dagster-webserver>=1.10.15,<2.0.0",
  "dagster-dg-cli>=0.1.0",
  "pydantic>=2.13.0,<3.0.0",
  "data-archive-models>=0.1.0a2.dev",
]

[project.urls]
Repository = "https://github.com/eth-library/arca-flow"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.10",
  "mypy>=1.20.1",
  "pre-commit>=4.0.0",
]

production = [
  "dagster-k8s>=0.26.14",
  "dagster-postgres>=0.26.14",
]

[tool.dagster]
module_name = "arca.flow.definitions"
code_location_name = "arca_flow"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "arca.flow"
defs_module = "arca.flow.definitions"
code_location_name = "arca_flow"

[tool.hatch.build]
packages = ["arca"]
exclude = ["arca/flow/tests/**"]

[tool.hatch.build.targets.wheel]
include = ["arca/flow/**"]
exclude = ["arca/flow/tests/**"]

[tool.uv.workspace]
members = ["cli"]

[tool.uv.sources]
data-archive-models = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled separately

[tool.ruff.lint.isort]
known-first-party = ["arca"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["arca/flow/tests"]
pythonpath = ["."]
