[build-system]
requires = ["hatchling>=1.12.0"]
build-backend = "hatchling.build"

[project]
name = "dap-cli"
version = "0.1.0"
description = "Developer CLI for the Data Archive Pipeline (DAP) - Orchestrator"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
  "typer>=0.15.0",
  "rich>=13.0.0",
]

[project.scripts]
dap = "dap_cli.app:main"
